String deduplication for traversal GC